--- a/HotChat/viewcontrollers/AlertViewController.xib
+++ b/HotChat/viewcontrollers/AlertViewController.xib
@@ -46,7 +46,7 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="1UX-as-Kkl"/>
                             </constraints>
-                            <state key="normal" title="Button"/>
+                            <state key="normal" title="OK"/>
                             <connections>
                                 <action selector="buttonTapped:" destination="-1" eventType="touchUpInside" id="AxT-GI-OAp"/>
                             </connections>
